fix nav menu on mobile shit)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,6 +217,10 @@ a {
 }
 
 @media (max-width: 600px) {
+    body.lock-scroll {
+        overflow: hidden;
+    }
+
     .nav-toggle {
         display: block;
         background: none;
@@ -263,14 +267,14 @@ a {
         flex-direction: column;
         align-items: flex-start;
         background-color: rgba(255, 255, 255, 0.9); 
-        position: fixed; 
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%; 
+        height: 100vh;
+        width: 100vw;
         padding: 20px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         z-index: 1000;
+        transition: transform 0.3s ease;
     }
 
     .dark-theme .nav-menu {
@@ -278,6 +282,7 @@ a {
     }
 
     .nav-menu.open {
+        transform: translateX(0);
         display: flex;
     }
 
